@@ -86,7 +86,7 @@ please report it to one of the addresses below.
 .SH AUTHOR
 .RB "-- Gareth Jones <" gareth_jones@users.berlios.de >
 
-.RB "-- Oliver Brakmann <" obrakmann@gmx.net >
+.RB "-- Oliver Brakmann <" oliverbrakmann@users.berlios.de >
  
 .SH SEE ALSO
 .BR pkginstall (8),
