@@ -115,7 +115,7 @@ package and afterwards delete the corresponding profile file, it will only be
 .HP 0
 
 .SH AUTHOR
-.RI "-- Oliver Brakmann <" obrakmann@gmx.net >
+.RI "-- Oliver Brakmann <" oliverbrakmann@users.berlios.de >
 
 .SH SEE ALSO
 .BR pkgadd (8),
