@@ -57,7 +57,7 @@ please report it to one of the addresses below.
 .SH AUTHOR
 .RI "-- Gareth Jones <" gareth_jones@users.berlios.de >
 
-.RI "-- Oliver Brakmann <" obrakmann@gmx.net >
+.RI "-- Oliver Brakmann <" oliverbrakmann@users.berlios.de >
 
 .SH SEE ALSO
 .BR pkgadd (8),
