@@ -69,7 +69,7 @@ you the hassle of reconfiguration should you decide to reinstall the package.
 .HP 0
 
 .SH AUTHOR
-.RI "-- Oliver Brakmann <" obrakmann@gmx.net >
+.RI "-- Oliver Brakmann <" oliverbrakmann@users.berlios.de >
 
 .SH SEE ALSO
 .BR pkgadd (8),
