@@ -1,4 +1,4 @@
-Prometheus 0.1
+Prometheus 0.2
 
 ProMeTheuS is the Package Management Tool Set.
 
