@@ -1,5 +1,5 @@
 # Prometheus package management tool set
-# Copyright (C) 2003-2004 Oliver Brakmann <obrakmann@gmx.net> &
+# Copyright (C) 2003-2004 Oliver Brakmann <oliverbrakmann@users.berlios.de> &
 # Gareth Jones <gareth_jones@users.berlios.de>
 #
 # This program is free software; you can redistribute it and/or modify it under
