@@ -1,5 +1,5 @@
 # Prometheus package management tool set
-# Copyright (C) 2003-2004 Oliver Brakmann <obrakmann@gmx.net> &
+# Copyright (C) 2003-2004 Oliver Brakmann <oliverbrakmann@users.berlios.de> &
 # Gareth Jones <gareth_jones@users.berlios.de>
 #
 # This program is free software; you can redistribute it and/or modify it under
@@ -216,7 +216,7 @@ function version {
 ${0##*/} (Prometheus) %VERSION%
 Released: %RELEASE%
 
-Copyright (C) 2003-2004 Oliver Brakmann <obrakmann@gmx.net> &
+Copyright (C) 2003-2004 Oliver Brakmann <oliverbrakmann@users.berlios.de> &
 Gareth Jones <gareth_jones@users.berlios.de>.
 
 This program is distributed in the hope that it will be useful, but WITHOUT ANY
