@@ -1,3 +1,8 @@
+2004-08-06 Gareth Jones <gareth_jones@users.berlios.de>
+
+	* All files: Changed Oliver's email address to
+	  <oliverbrakmann@users.berlios.de>.
+
 2004-08-04 Oliver Brakmann <oliverbrakmann@users.berlios.de>
 
 	* ChangeLog: Added
